k8s/ns/default/monos-market-place/combo.yaml

# Kubernetes Configuration for monos-market-place

# Deployment for user
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user
spec:
  selector:
    matchLabels:
      app: user
  template:
    metadata:
      labels:
        app: user
    spec:
      containers:
      - name: user
        image: monos-market-place/user:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 9001
---

# Service for user (ClusterIP)
apiVersion: v1
kind: Service
metadata:
  name: user
spec:
  type: ClusterIP
  selector:
    app: user
  ports:
    - port: 9001
      targetPort: 9001
      
---

# Service for user (LoadBalancer)
apiVersion: v1
kind: Service
metadata:
  name: user
spec:
  type: LoadBalancer
  selector:
    app: user
  ports:
    - port: 9001
      targetPort: 9001
      
---

# Service for user (NodePort)
apiVersion: v1
kind: Service
metadata:
  name: user
spec:
  type: NodePort
  selector:
    app: user
  ports:
    - port: 9001
      targetPort: 9001
      
---


# Deployment for payment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment
spec:
  selector:
    matchLabels:
      app: payment
  template:
    metadata:
      labels:
        app: payment
    spec:
      containers:
      - name: payment
        image: monos-market-place/payment:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 9002
---

# Service for payment (ClusterIP)
apiVersion: v1
kind: Service
metadata:
  name: payment
spec:
  type: ClusterIP
  selector:
    app: payment
  ports:
    - port: 9002
      targetPort: 9002
      
---

# Service for payment (LoadBalancer)
apiVersion: v1
kind: Service
metadata:
  name: payment
spec:
  type: LoadBalancer
  selector:
    app: payment
  ports:
    - port: 9002
      targetPort: 9002
      
---

# Service for payment (NodePort)
apiVersion: v1
kind: Service
metadata:
  name: payment
spec:
  type: NodePort
  selector:
    app: payment
  ports:
    - port: 9002
      targetPort: 9002
      
---


# Deployment for subscription
apiVersion: apps/v1
kind: Deployment
metadata:
  name: subscription
spec:
  selector:
    matchLabels:
      app: subscription
  template:
    metadata:
      labels:
        app: subscription
    spec:
      containers:
      - name: subscription
        image: monos-market-place/subscription:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 9003
---

# Service for subscription (ClusterIP)
apiVersion: v1
kind: Service
metadata:
  name: subscription
spec:
  type: ClusterIP
  selector:
    app: subscription
  ports:
    - port: 9003
      targetPort: 9003
      
---

# Service for subscription (LoadBalancer)
apiVersion: v1
kind: Service
metadata:
  name: subscription
spec:
  type: LoadBalancer
  selector:
    app: subscription
  ports:
    - port: 9003
      targetPort: 9003
      
---

# Service for subscription (NodePort)
apiVersion: v1
kind: Service
metadata:
  name: subscription
spec:
  type: NodePort
  selector:
    app: subscription
  ports:
    - port: 9003
      targetPort: 9003
      
---


# Deployment for product
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product
spec:
  selector:
    matchLabels:
      app: product
  template:
    metadata:
      labels:
        app: product
    spec:
      containers:
      - name: product
        image: monos-market-place/product:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 9008
---

# Service for product (ClusterIP)
apiVersion: v1
kind: Service
metadata:
  name: product
spec:
  type: ClusterIP
  selector:
    app: product
  ports:
    - port: 9008
      targetPort: 9008
      
---

# Service for product (LoadBalancer)
apiVersion: v1
kind: Service
metadata:
  name: product
spec:
  type: LoadBalancer
  selector:
    app: product
  ports:
    - port: 9008
      targetPort: 9008
      
---

# Service for product (NodePort)
apiVersion: v1
kind: Service
metadata:
  name: product
spec:
  type: NodePort
  selector:
    app: product
  ports:
    - port: 9008
      targetPort: 9008
      
---


# Ingress for monos-market-place
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monos-market-place
  labels:
    name: monos-market-place
spec:
  rules:
    - host: monos-market-place.com
      http:
        paths:

          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: user
                port:
                  number: 9001
    
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: payment
                port:
                  number: 9002
    
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: subscription
                port:
                  number: 9003
    
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: product
                port:
                  number: 9008
    
---

# Add more configurations below if needed
